Fixed toolbar button transparency and tooltip

--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -1,10 +1,10 @@
 <div class="m-toolbar">
 <mat-toolbar fxLayout="row" color="primary" id="online-banking-toolbar">
 
-  <button mat-icon-button *ngIf="!sidenavCollapsed" (click)="toggleSidenav()" matTooltip="Toggle Hide/Open">
+  <button mat-icon-button *ngIf="!sidenavCollapsed" (click)="toggleSidenav()" title="Toggle Hide/Open" matTooltipClass="primary-tooltip">
     <fa-icon icon="bars" size="lg" ></fa-icon>
   </button>
-  <button mat-icon-button *ngIf="true" (click)="toggleSidenavCollapse()" matTooltip="Toggle Collapse" fxHide.lt-md="true">
+  <button mat-icon-button *ngIf="true" (click)="toggleSidenavCollapse()" title="Toggle Collapse" matTooltipClass="primary-tooltip" fxHide.lt-md="true">
     <fa-icon *ngIf="!sidenavCollapsed" icon="chevron-left"></fa-icon>
     <fa-icon *ngIf="sidenavCollapsed" icon="chevron-right"></fa-icon>
   </button>
