--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -20,4 +20,9 @@
       ></online-banking-share-accounts-list>
     </div>
   </mat-tab>
+  <mat-tab label="test tab">
+    <div>
+      <test-tab></test-tab>
+    </div>
+  </mat-tab>
 </mat-tab-group>
